more layout changes

--- a/totalhr.web/areas/Admin/Views/Profile/Index.cshtml
+++ b/totalhr.web/areas/Admin/Views/Profile/Index.cshtml
@@ -13,10 +13,14 @@
     }; 
  }
 
+
 @section pagetitle{
    @AdminGeneric.V_Profile_Management
 }
 
+@section breadcrumb{
+    @Html.Raw(GenericHelper.MakeBreadCrumb(breadCrumbItems))
+}
 
  <div class="row-fluid">
      <p>
