Changes for layout

--- a/totalhr.web/areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/totalhr.web/areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using totalhr.Resources
+<!DOCTYPE html>
 <!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
@@ -26,191 +27,7 @@
 <!-- BEGIN BODY -->
 <body class="fixed-top">
    <!-- BEGIN HEADER -->
-   <div id="header" class="navbar navbar-inverse navbar-fixed-top">
-       <!-- BEGIN TOP NAVIGATION BAR -->
-       <div class="navbar-inner">
-           <div class="container-fluid">
-               <!-- BEGIN LOGO -->
-               <a class="brand" href="index.html">
-                   <img src="/Content/img/logo.png" alt="Admin Lab" />
-               </a>
-               <!-- END LOGO -->
-               <!-- BEGIN RESPONSIVE MENU TOGGLER -->
-               <a class="btn btn-navbar collapsed" id="main_menu_trigger" data-toggle="collapse" data-target=".nav-collapse">
-                   <span class="icon-bar"></span>
-                   <span class="icon-bar"></span>
-                   <span class="icon-bar"></span>
-                   <span class="arrow"></span>
-               </a>
-               <!-- END RESPONSIVE MENU TOGGLER -->
-               <div id="top_menu" class="nav notify-row">
-                   <!-- BEGIN NOTIFICATION -->
-                   <ul class="nav top-menu">
-                       <!-- BEGIN SETTINGS -->
-                       <li class="dropdown">
-                           <a class="dropdown-toggle element" data-placement="bottom" data-toggle="tooltip" href="#" data-original-title="Settings">
-                               <i class="icon-cog"></i>
-                           </a>
-                       </li>
-                       <!-- END SETTINGS -->
-                       <!-- BEGIN INBOX DROPDOWN -->
-                       <li class="dropdown" id="header_inbox_bar">
-                           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                               <i class="icon-envelope-alt"></i>
-                               <span class="badge badge-important">5</span>
-                           </a>
-                           <ul class="dropdown-menu extended inbox">
-                               <li>
-                                   <p>You have 5 new messages</p>
-                               </li>
-                               <li>
-                                   <a href="#">
-                                       <span class="photo"><img src="/Content/img/avatar-mini.png" alt="avatar" /></span>
-									<span class="subject">
-									<span class="from">Dulal Khan</span>
-									<span class="time">Just now</span>
-									</span>
-									<span class="message">
-									    Hello, this is an example messages please check
-									</span>
-                                   </a>
-                               </li>
-                               <li>
-                                   <a href="#">
-                                       <span class="photo"><img src="/Content/img/avatar-mini.png" alt="avatar" /></span>
-									<span class="subject">
-									<span class="from">Rafiqul Islam</span>
-									<span class="time">10 mins</span>
-									</span>
-									<span class="message">
-									 Hi, Mosaddek Bhai how are you ?
-									</span>
-                                   </a>
-                               </li>
-                               <li>
-                                   <a href="#">
-                                       <span class="photo"><img src="/Content/img/avatar-mini.png" alt="avatar" /></span>
-									<span class="subject">
-									<span class="from">Sumon Ahmed</span>
-									<span class="time">3 hrs</span>
-									</span>
-									<span class="message">
-									    This is awesome dashboard templates
-									</span>
-                                   </a>
-                               </li>
-                               <li>
-                                   <a href="#">
-                                       <span class="photo"><img src="/Content/img/avatar-mini.png" alt="avatar" /></span>
-									<span class="subject">
-									<span class="from">Dulal Khan</span>
-									<span class="time">Just now</span>
-									</span>
-									<span class="message">
-									    Hello, this is an example messages please check
-									</span>
-                                   </a>
-                               </li>
-                               <li>
-                                   <a href="#">See all messages</a>
-                               </li>
-                           </ul>
-                       </li>
-                       <!-- END INBOX DROPDOWN -->
-                       <!-- BEGIN NOTIFICATION DROPDOWN -->
-                       <li class="dropdown" id="header_notification_bar">
-                           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-
-                               <i class="icon-bell-alt"></i>
-                               <span class="badge badge-warning">7</span>
-                           </a>
-                           <ul class="dropdown-menu extended notification">
-                               <li>
-                                   <p>You have 7 new notifications</p>
-                               </li>
-                               <li>
-                                   <a href="#">
-                                       <span class="label label-important"><i class="icon-bolt"></i></span>
-                                       Server #3 overloaded.
-                                       <span class="small italic">34 mins</span>
-                                   </a>
-                               </li>
-                               <li>
-                                   <a href="#">
-                                       <span class="label label-warning"><i class="icon-bell"></i></span>
-                                       Server #10 not respoding.
-                                       <span class="small italic">1 Hours</span>
-                                   </a>
-                               </li>
-                               <li>
-                                   <a href="#">
-                                       <span class="label label-important"><i class="icon-bolt"></i></span>
-                                       Database overloaded 24%.
-                                       <span class="small italic">4 hrs</span>
-                                   </a>
-                               </li>
-                               <li>
-                                   <a href="#">
-                                       <span class="label label-success"><i class="icon-plus"></i></span>
-                                       New user registered.
-                                       <span class="small italic">Just now</span>
-                                   </a>
-                               </li>
-                               <li>
-                                   <a href="#">
-                                       <span class="label label-info"><i class="icon-bullhorn"></i></span>
-                                       Application error.
-                                       <span class="small italic">10 mins</span>
-                                   </a>
-                               </li>
-                               <li>
-                                   <a href="#">See all notifications</a>
-                               </li>
-                           </ul>
-                       </li>
-                       <!-- END NOTIFICATION DROPDOWN -->
-
-                   </ul>
-               </div>
-               <!-- END  NOTIFICATION -->
-               <div class="top-nav ">
-                   <ul class="nav pull-right top-menu" >
-                       <!-- BEGIN SUPPORT -->
-                       <li class="dropdown mtop5">
-
-                           <a class="dropdown-toggle element" data-placement="bottom" data-toggle="tooltip" href="#" data-original-title="Chat">
-                               <i class="icon-comments-alt"></i>
-                           </a>
-                       </li>
-                       <li class="dropdown mtop5">
-                           <a class="dropdown-toggle element" data-placement="bottom" data-toggle="tooltip" href="#" data-original-title="Help">
-                               <i class="icon-headphones"></i>
-                           </a>
-                       </li>
-                       <!-- END SUPPORT -->
-                       <!-- BEGIN USER LOGIN DROPDOWN -->
-                       <li class="dropdown">
-                           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                               <img src="/Content/img/avatar1_small.jpg" alt="">
-                               <span class="username">Mosaddek Hossain</span>
-                               <b class="caret"></b>
-                           </a>
-                           <ul class="dropdown-menu">
-                               <li><a href="#"><i class="icon-user"></i> My Profile</a></li>
-                               <li><a href="#"><i class="icon-tasks"></i> My Tasks</a></li>
-                               <li><a href="#"><i class="icon-calendar"></i> Calendar</a></li>
-                               <li class="divider"></li>
-                               <li><a href="login.html"><i class="icon-key"></i> Log Out</a></li>
-                           </ul>
-                       </li>
-                       <!-- END USER LOGIN DROPDOWN -->
-                   </ul>
-                   <!-- END TOP NAVIGATION MENU -->
-               </div>
-           </div>
-       </div>
-       <!-- END TOP NAVIGATION BAR -->
-   </div>
+   @Html.Partial("_PartialHeader")
    <!-- END HEADER -->
    <!-- BEGIN CONTAINER -->
    <div id="container" class="row-fluid">
@@ -242,7 +59,7 @@
                    <div id="theme-change" class="hidden-phone">
                        <i class="icon-cogs"></i>
                         <span class="settings">
-                            <span class="text">Theme:</span>
+                            <span class="text">@AdminGeneric.V_Theme:</span>
                             <span class="colors">
                                 <span class="color-default" data-style="default"></span>
                                 <span class="color-gray" data-style="gray"></span>
@@ -272,24 +89,7 @@
             <!-- BEGIN PAGE CONTENT-->
 
              @RenderBody()
-
-            @***<div class="row-fluid">
-               <div class="span12" style="display:none;">
-                  <div class="widget">
-                        <div class="widget-title">
-                           <h4><i class="icon-globe"></i>Blank Page</h4>
-                           <span class="tools">
-                           <a href="javascript:;" class="icon-chevron-down"></a>
-                           <a href="javascript:;" class="icon-remove"></a>
-                           </span>                    
-                        </div>
-                        <div class="widget-body">
-                            Blank page sample
-                        </div>
-                  </div>
-               </div>
-            </div>*@
-
+             
             <!-- END PAGE CONTENT-->         
          </div>
          <!-- END PAGE CONTAINER-->
@@ -299,7 +99,7 @@
    <!-- END CONTAINER -->
    <!-- BEGIN FOOTER -->
    <div id="footer">
-       2015 &copy; TotalHR Admin.
+       2015 &copy; @AdminGeneric.V_TotalHR_Signature .
       <div class="span pull-right">
          <span class="go-top"><i class="icon-arrow-up"></i></span>
       </div>
