Task Scheduler search, details and update functionality

--- a/totalhr.web/Views/Account/Index.cshtml
+++ b/totalhr.web/Views/Account/Index.cshtml
@@ -49,6 +49,12 @@
 
             </div>
         </div>
+
+        <div class="option shadowed" onclick="document.location.href='/Task/'">
+            <h4>Task Scheduling System</h4>
+            <div class="cont">
+            </div>
+        </div>
     </div>    
 
  
