--- a/totalhr.web/Views/Task/Record.cshtml
+++ b/totalhr.web/Views/Task/Record.cshtml
@@ -74,13 +74,13 @@
             <p>
                 <input type="submit" value="Save" />
             </p>
+            <div>
+                @Html.ActionLink("Back to Home", "Index")
+
+            </div>
         </fieldset>
 
 
-        <div>
-            @Html.ActionLink("Back to Time Recording Home", "Index")
-
-        </div>
 
         @*@section Scripts{
             @Scripts.Render("~/bundles/jqueryval")
